<resources>

    // titles and sub titles

    <string name="app_name">Heart and Blood Pressure</string>
    <string name="sub_title">TRACKER</string>


    <string name="arg_alarm_obj">AlarmObject</string>
    <string name="bundle_alarm_obj">BundleAlarmObject</string>
    <string name="alarm_title">My Alarm</string>
    <string name="dayNightTheme">DayNightTheme</string>
    <string name="alarmwithvibration">Reminder with Vibration</string>


    <string name="tracker">Tracker</string>
    <string name="export">Export</string>
    <string name="systolic">Systolic</string>
    <string name="diastolic">Diastolic</string>
    <string name="pulse">Pulse</string>
    <string name="add_data">Add Data</string>
    <string name="date_time"><![CDATA[Date & time]]></string>
    <string name="save">Save</string>
    <string name="update">Update</string>
    <string name="normal">Normal</string>
    <string name="mmhg">mmHg</string>
    <string name="bpm">BPM</string>


    <string name="type">Type</string>
    <string name="got_it">Got It</string>
    <string name="note">Note +</string>
    <string name="weight_and_bmi_title">Weight and BMI</string>
    <string name="select_height">Select Height</string>
    <string name="select_weight">Select Weight</string>
    <string name="kg">Kg</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="cm">cm</string>
    <string name="no_records_yet_add_your_first_blood_pressure_record">No Records yet. Add your\n first blood pressure record</string>
    <string name="notes">Notes</string>

    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="info_title"><![CDATA[Information & Knowledge]]></string>
    <string name="measure_now">Measure Now</string>
    <string name="no_records_yet_add_your_n_first_heart_rate_record">No Records yet. Add your\n first heart rate record</string>
    <string name="add_data_string">+ Add Data</string>


    // BP Ranges
    <string name="hypo_bp_range"> <![CDATA[ SYS <90 or DIA <60 ]]> </string>
    <string name="normal_bp_range">SYS 90–119 and DIA 60–79</string>
    <string name="elevated_bp_range">SYS 120–129 and DIA 60–79</string>
    <string name="stage1_bp_range">SYS 130–139 or DIA 80–89</string>
    <string name="stage2_bp_range">SYS 140–180 or DIA 90–120</string>
    <string name="critical_bp_range">SYS >180 or DIA >120</string>


    // BMI Ranges
    <string name="veryseverlyunderweight_range"><![CDATA[BMI <16.0]]></string>
    <string name="severlyunderweight_range">BMI 16.0–16.9</string>
    <string name="underweigth_range">BMI 17.0–18.4</string>
    <string name="normalweight_range">BMI 18.5–24.9</string>
    <string name="overweight_range">BMI 25.0–29.9</string>
    <string name="obese1_range">BMI 30.0–34.9</string>
    <string name="obese3_range"><![CDATA[BMI >40.0]]></string>
    <string name="obese2_range">BMI 35.0–39.9</string>


    // Heart rate Ranges
    <string name="hr_low_range"><![CDATA[BPM <60]]>  </string>
    <string name="hr_normal_range">BPM 60.0–100</string>
    <string name="hr_high_range"><![CDATA[BPM >100]]></string>

    // Heart rate
    <string name="hr_low">Low </string>
    <string name="hr_normal">Normal</string>
    <string name="hr_high">High</string>



    <string name="no_activity_found_exception">No activity found to open</string>
    <string name="heart_rate">Heart Rate</string>
    <string name="measure_and_tracker">Measure and Tracker</string>
    <string name="new_record_title">New Record</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="skip"><font><u>Skip</u></font></string>
    <string name="select_language_title">Select Language</string>

    <string name="measure">Measure</string>
    <string name="gender_title">Gender</string>
    <string name="age">Age</string>
    <string name="version">Version</string>
    <string name="general">General</string>
    <string name="camera_permission_desc">Camera permission is required to measure heart rate</string>
    <string name="camera_permission_settigns">You need to allow camera permissions in Settings manually</string>
    <string name="ok">OK</string>
    <string name="storage_permission_desc">Storage Permission required to export data</string>


</resources>