<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
android:background="@drawable/main_card_bg"
    android:minHeight="@dimen/_120sdp">





    <TextView
        android:id="@+id/tv_hr_types_bs_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_20sdp"
        android:text="@string/type"
        android:textColor="@color/white"
        android:textSize="@dimen/_18ssp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tv_low_hr_title"/>


    <ImageView
        android:id="@+id/img_cross"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_20sdp"
        android:src="@drawable/cross_icon_withbg"
        app:layout_constraintTop_toTopOf="@+id/tv_hr_types_bs_title"
        app:layout_constraintBottom_toBottomOf="@+id/tv_hr_types_bs_title"
        app:layout_constraintEnd_toEndOf="parent"
        />



    <TextView
        android:id="@+id/tv_low_hr_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hr_low"
        android:textAlignment="viewStart"
        android:textSize="@dimen/_15ssp"
        android:layout_marginStart="@dimen/_10sdp"
        android:theme="@style/Bottomsheet.TextsTheme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tv_hr_low_desc"
        android:drawablePadding="@dimen/_10sdp"
        app:drawableLeftCompat="@drawable/bp_type_heart_icon"
        app:drawableTint="@color/hypotension_bp_color" />


    <TextView
        android:id="@+id/tv_hr_low_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hr_low_range"
        android:textColor="#59FFFFFF"
        android:layout_marginStart="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="@+id/tv_low_hr_title"
        app:layout_constraintBottom_toTopOf="@+id/tv_normal_hr_title" />





    <TextView
        android:id="@+id/tv_normal_hr_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hr_normal"
        android:textAlignment="viewStart"
        android:textSize="@dimen/_15ssp"
        android:layout_marginStart="@dimen/_10sdp"
        android:theme="@style/Bottomsheet.TextsTheme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tv_hr_normal_desc"
        android:drawablePadding="@dimen/_10sdp"
        app:drawableLeftCompat="@drawable/bp_type_heart_icon"
        app:drawableTint="@color/normal_bp_color" />


    <TextView
        android:id="@+id/tv_hr_normal_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hr_normal_range"
        android:textColor="#59FFFFFF"
        android:layout_marginStart="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="@+id/tv_normal_hr_title"
        app:layout_constraintBottom_toTopOf="@+id/tv_high_hr_title" />



    <TextView
        android:id="@+id/tv_high_hr_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hr_high"
        android:textAlignment="viewStart"
        android:textSize="@dimen/_15ssp"
        android:layout_marginStart="@dimen/_10sdp"
        android:theme="@style/Bottomsheet.TextsTheme"
        app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintBottom_toTopOf="@+id/tv_hr_high_desc"
        android:drawablePadding="@dimen/_10sdp"
        app:drawableLeftCompat="@drawable/bp_type_heart_icon"
        app:drawableTint="@color/hyper_crisis_color" />


    <TextView
        android:id="@+id/tv_hr_high_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hr_high_range"
        android:textColor="#59FFFFFF"
        android:layout_marginStart="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="@+id/tv_high_hr_title"
        app:layout_constraintBottom_toTopOf="@+id/button_got_it" />









    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_got_it"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_30sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:backgroundTint="@color/tab_selected_color"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/got_it"
        android:textAllCaps="false"
        android:textSize="@dimen/_20ssp"
        app:cornerRadius="@dimen/_30sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>